--- a/ipynb/Runtime.ipynb
+++ b/ipynb/Runtime.ipynb
@@ -11,21 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Setup iPython environment.\n",
     "%pylab inline\n",
@@ -36,13 +26,243 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext line_profiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from coniii.samplers import *\n",
+    "from coniii.utils import define_ising_helper_functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=10\n",
+    "theta = np.random.normal(size=n+n*(n-1)//2)\n",
+    "calc_e,_,_ = define_ising_helper_functions()\n",
+    "\n",
+    "sampler=FastMCIsing(n, theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.33 s ± 25.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sampler.generate_samples(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "687 ms ± 12.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sampler.generate_samples_parallel(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampler=Metropolis(n, theta, calc_e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.73 s ± 98 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sampler.generate_samples(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.32 s ± 18.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sampler.generate_samples_parallel(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import common libraries.\n",
+    "from coniii import *\n",
+    "\n",
+    "# Add path to files for solving the n=5 system exactly. This is included as an example for the package, but you can create your own by using the exact module.\n",
+    "# To create ising_eqn_5_sym.py, run in the shell\n",
+    "# >>> python exact.py 5 1\n",
+    "from coniii.ising_eqn import ising_eqn_5_sym\n",
+    "\n",
+    "# Define common functions.\n",
+    "calc_e, calc_observables, mchApproximation = define_ising_helper_functions()\n",
+    "\n",
+    "# Generate example data set.\n",
+    "n = 5  # system size\n",
+    "np.random.seed(0)  # standardize random seed\n",
+    "h,J = np.random.normal(scale=.1, size=n), np.random.normal(scale=.1, size=n*(n-1)//2)  # random fields, couplings\n",
+    "hJ = np.concatenate((h, J))\n",
+    "p = ising_eqn_5_sym.p(hJ)  # probability distribution of all states p(s)\n",
+    "sisjTrue = ising_eqn_5_sym.calc_observables(hJ)  # exact magnetizations and pairwise correlations\n",
+    "\n",
+    "allstates = bin_states(n, True)  # all 2^n possible binary states in {-1,1} basis\n",
+    "sample = allstates[np.random.choice(range(2**n),\n",
+    "                                    size=100,\n",
+    "                                    replace=True,\n",
+    "                                    p=p)]  # random sample from p(s)\n",
+    "sisj = pair_corr(sample, concat=True)  # magnetizations and pairwise correlations of random sample\n",
+    "\n",
+    "def error_on_correlations(estSisj):\n",
+    "    return np.linalg.norm( sisj - estSisj )\n",
+    "\n",
+    "def error_on_multipliers(estMultipliers):\n",
+    "    return np.linalg.norm( hJ - estMultipliers )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sampling parameters must be set here (in case you want to immediately sample using \n",
+    "# the given set of parameters)\n",
+    "solver = MCH(n,\n",
+    "             calc_observables=calc_observables,\n",
+    "             sample_size=100,\n",
+    "             sample_method='ising_metropolis',\n",
+    "             mch_approximation=mchApproximation,\n",
+    "             n_jobs=1 )\n",
+    "\n",
+    "# Define function for changing learning parameters as we converge.\n",
+    "def learn_settings(i):\n",
+    "    \"\"\"\n",
+    "    Take in the iteration counter and set the maximum change allowed in any given \n",
+    "    parameter (maxdlamda) and the multiplicative factor eta, where \n",
+    "    d(parameter) = (error in observable) * eta.\n",
+    "    \n",
+    "    Additional option is to also return the sample size for that step by returning a \n",
+    "    tuple. Larger sample sizes are necessary for higher accuracy.\n",
+    "    \"\"\"\n",
+    "    return {'maxdlamda':exp(-i/5.),'eta':exp(-i/5.)}\n",
+    "\n",
+    "# Run solver.\n",
+    "# solver.sampler.update_parameters(hJ)\n",
+    "# X=np.random.choice([-1.,1.], size=(1000,n))\n",
+    "# %lprun -f solver.sampler.generate_samples_parallel solver.sampler.generate_samples_parallel(1000,initial_sample=X)\n",
+    "%lprun -f solver.sampler.generate_samples solver.solve(constraints=sisj,maxiter=1,custom_convergence_f=learn_settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sampling parameters must be set here (in case you want to immediately sample using \n",
+    "# the given set of parameters)\n",
+    "solver = MCH(n,\n",
+    "             calc_observables=calc_observables,\n",
+    "             sample_size=100,\n",
+    "             sample_method='metropolis',\n",
+    "             mch_approximation=mchApproximation)\n",
+    "\n",
+    "# Define function for changing learning parameters as we converge.\n",
+    "def learn_settings(i):\n",
+    "    \"\"\"\n",
+    "    Take in the iteration counter and set the maximum change allowed in any given \n",
+    "    parameter (maxdlamda) amnd the multiplicative factor eta, where \n",
+    "    d(parameter) = (error in observable) * eta.\n",
+    "    \n",
+    "    Additional option is to also return the sample size for that step by returning a \n",
+    "    tuple. Larger sample sizes are necessary for higher accuracy.\n",
+    "    \"\"\"\n",
+    "    return {'maxdlamda':exp(-i/5.),'eta':exp(-i/5.)}\n",
+    "\n",
+    "# Run solver.\n",
+    "# solver.sampler.theta=hJ\n",
+    "# X=np.random.choice([-1.,1.], size=(1000,n))\n",
+    "# %lprun -f solver.sampler.generate_samples_parallel solver.sampler.generate_samples_parallel(1000,initial_sample=X)\n",
+    "%lprun -f solver.sampler.generate_samples_parallel solver.solve(constraints=sisj,maxiter=1,custom_convergence_f=learn_settings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inverse maxent algorithms"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import common libraries.\n",
-    "from __future__ import division\n",
     "from coniii import *\n",
     "import importlib\n",
     "from misc.plot import colorcycle\n",
@@ -374,21 +594,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
