--- a/ipynb/Runtime.ipynb
+++ b/ipynb/Runtime.ipynb
@@ -11,11 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Setup iPython environment.\n",
     "%pylab inline\n",
@@ -34,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,9 +194,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/eddie/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py:646: UserWarning: Number of burn in MCMC iterations between samples may be too small for convergence to stationary distribution.\n",
+      "  \"convergence to stationary distribution.\")\n",
+      "/Users/eddie/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py:649: UserWarning: Number of MCMC iterations between samples may be too small for convergence to stationary distribution.\n",
+      "  \"stationary distribution.\")\n"
+     ]
+    }
+   ],
    "source": [
     "# Sampling parameters must be set here (in case you want to immediately sample using \n",
     "# the given set of parameters)\n",
@@ -195,7 +216,7 @@
     "             sample_size=100,\n",
     "             sample_method='ising_metropolis',\n",
     "             mch_approximation=mchApproximation,\n",
-    "             n_jobs=1 )\n",
+    "             n_cpus=1 )\n",
     "\n",
     "# Define function for changing learning parameters as we converge.\n",
     "def learn_settings(i):\n",
@@ -218,9 +239,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/eddie/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py:646: UserWarning: Number of burn in MCMC iterations between samples may be too small for convergence to stationary distribution.\n",
+      "  \"convergence to stationary distribution.\")\n",
+      "/Users/eddie/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py:649: UserWarning: Number of MCMC iterations between samples may be too small for convergence to stationary distribution.\n",
+      "  \"stationary distribution.\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sampling parameters must be set here (in case you want to immediately sample using \n",
+    "# the given set of parameters)\n",
+    "solver = MCH(n,\n",
+    "             calc_observables=calc_observables,\n",
+    "             sample_size=100,\n",
+    "             sample_method='ising_metropolis',\n",
+    "             mch_approximation=mchApproximation)\n",
+    "\n",
+    "# Define function for changing learning parameters as we converge.\n",
+    "def learn_settings(i):\n",
+    "    \"\"\"\n",
+    "    Take in the iteration counter and set the maximum change allowed in any given \n",
+    "    parameter (maxdlamda) and the multiplicative factor eta, where \n",
+    "    d(parameter) = (error in observable) * eta.\n",
+    "    \n",
+    "    Additional option is to also return the sample size for that step by returning a \n",
+    "    tuple. Larger sample sizes are necessary for higher accuracy.\n",
+    "    \"\"\"\n",
+    "    return {'maxdlamda':exp(-i/5.),'eta':exp(-i/5.)}\n",
+    "\n",
+    "# Run solver.\n",
+    "# solver.sampler.update_parameters(hJ)\n",
+    "# X=np.random.choice([-1.,1.], size=(1000,n))\n",
+    "# %lprun -f solver.sampler.generate_samples_parallel solver.sampler.generate_samples_parallel(1000,initial_sample=X)\n",
+    "%lprun -f solver.sampler.generate_samples solver.solve(constraints=sisj,maxiter=1,custom_convergence_f=learn_settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/eddie/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py:646: UserWarning: Number of burn in MCMC iterations between samples may be too small for convergence to stationary distribution.\n",
+      "  \"convergence to stationary distribution.\")\n",
+      "/Users/eddie/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py:649: UserWarning: Number of MCMC iterations between samples may be too small for convergence to stationary distribution.\n",
+      "  \"stationary distribution.\")\n"
+     ]
+    }
+   ],
    "source": [
     "# Sampling parameters must be set here (in case you want to immediately sample using \n",
     "# the given set of parameters)\n",
